# ldacc

./: CMakeLists.txt  README.md
data/: stopwords.txt
data/corpus2/: 102.txt  34.txt  74.txt  82.txt  86.txt  90.txt  98.txt
include/: gibbs_sampling.h  init_model.h  lda.h  multi_sampler.h  preprocess.h  stdafx.h  utils.h
py/: ldacc_Chinese_analyser.py  ldacc_data_preparation.py  ldacc_stopwords_filter.py  segmenter.py  stopwords_filter.py
src/: CMakeLists.txt  gb2312_to_utf8.sh  gibbs_sampling.cc  init_model.cc  lda.cc  main.cc  multi_sampler.cc  preprocess.cc  utils.cc
